# macdia-inf8239-casopractico3

./: .env.example  .pre-commit-config.yaml  README.md  pyproject.toml
datasheets/: DATASET_CARD.md
docs/: annotation_guidelines.md  data_dictionary.md
models/: traffic_predictor_v1.pkl
notebooks/: EDA.ipynb
src/trafficincidentdetection/: 1_data_collector.py  2_model_trainer.py  3_model_predictor.py  config.py  preprocess.py  tokenizers.py
