[project]
name = "trafficincidentdetection"
version = "0.1.0"
description = "An NLP system for monitoring of posts describing traffic incidents"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=6.30.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.5",
    "pandas>=2.3.1",
    "pip>=25.3",
    "pydantic-settings>=2.10.1",
    "python-dotenv>=1.1.1",
    "scikit-learn==1.7.1",
    "spacy>=3.8.7",
    "tweepy[async]>=4.16.0",
    "wordcloud>=1.9.4",
    "xgboost>=3.1.1",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "detect-secrets>=1.5.0",
    "mypy>=1.17.1",
    "pandas-stubs>=2.3.0.250703",
    "pre-commit>=4.2.0",
    "ruff>=0.12.7",
    "types-pyyaml>=6.0.12.20250516",
]


[build-system]
requires = ["uv_build>=0.8.4,<0.9.0"]
build-backend = "uv_build"
